fixed part of the text not showing properly. Am considering making the background for the dropdown .desc parts to be solid instead of opaque

--- a/ImageLondon/css/gallery.css
+++ b/ImageLondon/css/gallery.css
@@ -37,7 +37,8 @@ a:focus {
 
 .dropdown-content {
   display: none;
-  min-width: 30%;
+  position: center;
+  min-width: 160px;
   box-shadow: 0px 7px 15px 0px rgb(82, 112, 146);
   z-index: 1;
 }
@@ -110,8 +111,12 @@ footer {
       font-size: small;
   }
 
-  img {
+  #wimg {
     width: 50%;
+  }
+
+  .desc {
+    font-size: small;
   }
 
   nav a, footer {
@@ -134,8 +139,12 @@ footer {
       font-size: small;
   }
 
-  img {
-    width: 30%;
+  #wimg {
+    width: 40%;
+  }
+
+  .desc {
+    font-size: small;
   }
 
   nav a, footer {
